--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ShooterCourse_Udemy.ShooterCharacter.HipFireMontege",NewName="/Script/ShooterCourse_Udemy.ShooterCharacter.HipFireMontage")
++PropertyRedirects=(OldName="/Script/ShooterCourse_Udemy.ShooterCharacter.CrosshairSpredMultiplier",NewName="/Script/ShooterCourse_Udemy.ShooterCharacter.CrosshairSpreadMultiplier")
++PropertyRedirects=(OldName="/Script/ShooterCourse_Udemy.ShooterCharacter.HipFireMontаge",NewName="/Script/ShooterCourse_Udemy.ShooterCharacter.HipFireMontage")
